--- a/mobile game/Assets/TODO.txt
+++ b/mobile game/Assets/TODO.txt
@@ -1,7 +1,2 @@
 TODO:
-1. remove the current stat system
-2. create a stat system inside enemy script
-3. finish tip system
-
-NOTES:
-don't add any movement logic inside enemy script, this will be hanled by separate scripts
+create a knockback script with a knockback void, normal script would be fine
